--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Makefile
-cmake_install.cmake
-install_manifest.txt
-CTestTestfile.cmake
+Debug/
+Release/
+.vscode/
+.vs/
+*.log
+*.obj
+*.pdb
+*.tlog
+*.exe
+*.ncb
+*.plg
+*.pch
+*.idb
+*.exp
+*.aps
+*.opt
+*.sdf
+*.ipch
+GPATH
+GRTAGS
+GSYMS
+GTAGS
+HTML/
+
+~*.*
+Build/
+build/
+/tags
+.*.swp
+*.autosave
+.DS_Store
