--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -55,8 +55,8 @@ ENDIF()
 #设置编译选项-------------------------------------------
 IF(WIN32)
     # DEBUG RELEASE
-    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -Wall")
-    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -m64 -std=c++11 -Wall")
+    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -Wall")
+    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -Wall")
 
 ELSEIF(APPLE)
     SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -m64 -std=c++11 -O0 -Wall -g")
