shi yong tie tu

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -47,10 +47,10 @@ ENDIF()
 #拷贝资源-----------------------------------------------
 IF(WIN32)
     FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin/${CMAKE_BUILD_TYPE})
-    # FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin/${CMAKE_BUILD_TYPE})
+    FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin/${CMAKE_BUILD_TYPE})
 ELSE()
     FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
-    # FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
+    FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
 ENDIF()
 
 
