--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -20,7 +20,7 @@ AUX_SOURCE_DIRECTORY(src DIR_SRCS)
 ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS} )
 
 #链接库
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} genesis glad)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} genesis)
 
 #输出路径
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)
